[package]
name = "diskannrs"
version = "0.1.0"
edition = "2021"
description = "A DiskANN-like Rust library with single-file storage and minimal RAM requirements"
license = "MIT" 
repository = "https://github.com/lukaesch/diskann-rs"

[dependencies]
rand = "0.8"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.7"
