[package]
name = "diskann-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of DiskANN (Disk-based Approximate Nearest Neighbor search) featuring a 3-layer index architecture and parallel query processing. This project provides an efficient and scalable solution for large-scale vector similarity search with single-file storage."
license = "MIT" 
repository = "https://github.com/lukaesch/diskann-rs"

[dependencies]
rand = "0.8"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.7"
