[package]
name = "diskann-rs"
version = "0.3.0"
edition = "2024"
description = "A Rust implementation of DiskANN (Disk-based Approximate Nearest Neighbor search) using the Vamana graph algorithm. Provides memory-efficient vector search through graph traversal and memory-mapped storage, enabling billion-scale search with minimal RAM usage."
license = "MIT" 
repository = "https://github.com/lukaesch/diskann-rs"

[dependencies]
rand = "0.8"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.10"
anndists = {version = "0.1.3", default-features = false, features = ["stdsimd"]}